# EdgeDetector-OpenCV-Android

./: .gitignore  OPENCV_SETUP.md  PROJECT_SUMMARY.md  PUBLISH_INSTRUCTIONS.md  QUICKSTART.md  README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_processor.cpp  edge_processor.h  native-lib.cpp
app/src/main/java/com/flam/edgedetector/: CameraManager.java  GLRenderer.java  MainActivity.java  NativeProcessor.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
web/: index.html  package-lock.json  package.json  styles.css  tsconfig.json
web/src/: index.ts
